| Summary: | ASTERISK-29315: res_pjsip: re-registration gets stuck if setting initial auth credentials fails | ||
| Reporter: | Nick French (naf) | Labels: | |
| Date Opened: | 2021-02-24 20:46:18.000-0600 | Date Closed: | 2021-03-02 11:17:52.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_registration |
| Versions: | 18.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If set_outbound_initial_authentication_credentials() fails, the handle_client_registration bails early without creating or sending a register message.
This is a real problem when the registration request is a re-register, because then the registration will still be 'active' despite it never being sent at all. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-02-24 20:46:19.592-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-03-02 11:17:53.486-0600 Change 15519 merged by Joshua Colp: res_pjsip: dont return early from registration if init auth fails [https://gerrit.asterisk.org/c/asterisk/+/15519|https://gerrit.asterisk.org/c/asterisk/+/15519] By: Friendly Automation (friendly-automation) 2021-03-02 11:18:05.051-0600 Change 15499 merged by Joshua Colp: res_pjsip: dont return early from registration if init auth fails [https://gerrit.asterisk.org/c/asterisk/+/15499|https://gerrit.asterisk.org/c/asterisk/+/15499] | ||